fix(tabsbar): fix vertical tabs pinned tabs spacing

--- a/theme/parts/tabsbar.css
+++ b/theme/parts/tabsbar.css
@@ -218,7 +218,7 @@ spacer[part=overflow-start-indicator], spacer[part=overflow-end-indicator] {
 	
 	/* Vertical tabs only */
 	#tabbrowser-tabs[orient="vertical"] & {
-		padding-block: calc(var(--gnome-toolbar-spacing) / 2) !important;
+		padding-block: var(--gnome-toolbar-spacing) !important;
 	}
 }
 
